--- a/transition-activity/activity.css
+++ b/transition-activity/activity.css
@@ -1,1 +1,9 @@
-
+button {
+   background: ghostwhite;
+}
+button:hover{
+    transition: 2s;
+    background: cornflowerblue;
+    color:ghostwhite
+   
+}
